fix spacing for RegisterForm

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,12 @@
   cursor: pointer;
 }
 
+.form-register {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
 
 @media (min-width: 600px) {
   .btn-a {
